--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-gunicorn
-flask
-cv2==4.7.0
-pytesseract
+Flask==2.2.2
+Flask==1.1.2
+numpy==1.24.2
+numpy==1.21.5
+opencv_python==4.7.0.72
+pytesseract==0.3.10
+pyttsx3==2.90
+torch==2.0.0
